fixed highlight container second image overlaping on mobile design

--- a/src/app/components/highlight-item/highlight-item.component.css
+++ b/src/app/components/highlight-item/highlight-item.component.css
@@ -42,11 +42,17 @@
   .card {
     margin: 15px;
   }
+  /*h1.highlight__title {*/
+  /*  padding: 10px;*/
+  /*}*/
   .highlight {
     height: 850px;
   }
   img {
     width: 300px;
     height: 200px;
+  }
+  h3.description {
+    display: none;
   }
 }
